grunt task to handle qa/dev builds

--- a/platform-ui/conf/appConfig_qa.json
+++ b/platform-ui/conf/appConfig_qa.json
@@ -1,29 +1,32 @@
 {
-    "NUM_OF_WORKERS" : 1,
-    "ENV_PORT" : 80,
-    "SESSION_SECRET" : "IlimiEkstepSecret01",
-    "MONGO_SESSION_STORE_URL" : "mongodb://localhost/session_store",
-    "SESSION_STORE_TYPE" : "Mongo",
-    "REDIS_PORT":"",
-    "REDIS_HOST":"",
-    "REDIS_DB":"",
-    "REDIS_PASSWORD":"",
-    "MONGO_DB_URI":"mongodb://localhost/percp_scope_1",
-    "ENVIRONMENT":"Dev",
-    "DEFAULT_LOGGER":"log4js",
-    "LOG_LEVEL":"DEBUG",
+    "NUM_OF_WORKERS": 1,
+    "ENV_PORT": 80,
+    "SESSION_SECRET": "IlimiEkstepSecret01",
+    "MONGO_SESSION_STORE_URL": "mongodb://localhost/session_store",
+    "SESSION_STORE_TYPE": "Mongo",
+    "REDIS_PORT": "",
+    "REDIS_HOST": "",
+    "REDIS_DB": "",
+    "REDIS_PASSWORD": "",
+    "MONGO_DB_URI": "mongodb://localhost/ekstep_db",
+    "ENVIRONMENT": "Dev",
+    "DEFAULT_LOGGER": "log4js",
+    "LOG_LEVEL": "DEBUG",
     "DEFAULT_RESULT_SIZE": 20,
     "AWS_ACCESSKEYID": "AKIAJEJTE3D2LHWDSHPQ",
     "AWS_SECRETACCESSKEY": "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",
     "USE_TEST_MAIL": false,
+    "ORCHESTRATOR_URL": "http://localhost:9090",
+    "APP_STATUS": "LIVE",
     "USER_LOGIN": {
-        "GOOGLE_CLIENT_ID": "562974388006-lldrhhbhjdq1dmavc9eddsbcqkif68nc.apps.googleusercontent.com",
-        "GOOGLE_CLIENT_SECRET": "nU_kDXbsQ04foJ2uO_Aq28Lx",
-        "GOOGLE_REDIRECT_URI": "http://www.ilimi.in/user/google/login/response",
-        "GOOGLE_AUTH_SCOPES": ["https://www.googleapis.com/auth/gmail.modify", "https://www.googleapis.com/auth/userinfo.email"],
-        "FACEBOOK_APP_ID": "1609760659256782",
-        "FACEBOOK_APP_SECRET": "b1e937aac0ee4d9d50bd3727e585d1a9",
-        "FACEBOOK_REDIRECT_URI": "http://www.ilimi.in/user/facebook/login/response",
+        "GOOGLE_CLIENT_ID": "149422338782-gp602lvp42iig3cvovi7i6i4rp3dr9o5.apps.googleusercontent.com",
+        "GOOGLE_CLIENT_SECRET": "DiFwTGwVGcxgiTR6eWlntRN9",
+        "GOOGLE_REDIRECT_URI": "http://lp-sandbox.ekstep.org/oauth2callback",
+        "HOSTED_DOMAIN": "ilimi.in",
+        "GOOGLE_AUTH_SCOPES": ["https://www.googleapis.com/auth/userinfo.email"],
+        "FACEBOOK_APP_ID": "844215588980073",
+        "FACEBOOK_APP_SECRET": "b129dfc70b3f62b182ca580795d7b2c8",
+        "FACEBOOK_REDIRECT_URI": "http://dev.ilimi.in:3000/user/facebook/login/response",
         "FACEBOOK_AUTH_SCOPES": ["public_profile", "user_friends", "email"]
     }
 }
