--- a/platform-ui/conf/appConfig.json
+++ b/platform-ui/conf/appConfig.json
@@ -1,17 +1,17 @@
 {
-    "NUM_OF_WORKERS" : 1,
-    "ENV_PORT" : 3000,
-    "SESSION_SECRET" : "IlimiEkstepSecret01",
-    "MONGO_SESSION_STORE_URL" : "mongodb://localhost/session_store",
-    "SESSION_STORE_TYPE" : "Mongo",
-    "REDIS_PORT":"",
-    "REDIS_HOST":"",
-    "REDIS_DB":"",
-    "REDIS_PASSWORD":"",
-    "MONGO_DB_URI":"mongodb://localhost/ekstep_db",
-    "ENVIRONMENT":"Dev",
-    "DEFAULT_LOGGER":"log4js",
-    "LOG_LEVEL":"DEBUG",
+    "NUM_OF_WORKERS": 1,
+    "ENV_PORT": 3000,
+    "SESSION_SECRET": "IlimiEkstepSecret01",
+    "MONGO_SESSION_STORE_URL": "mongodb://localhost/session_store",
+    "SESSION_STORE_TYPE": "Mongo",
+    "REDIS_PORT": "",
+    "REDIS_HOST": "",
+    "REDIS_DB": "",
+    "REDIS_PASSWORD": "",
+    "MONGO_DB_URI": "mongodb://localhost/ekstep_db",
+    "ENVIRONMENT": "Dev",
+    "DEFAULT_LOGGER": "log4js",
+    "LOG_LEVEL": "DEBUG",
     "DEFAULT_RESULT_SIZE": 20,
     "AWS_ACCESSKEYID": "AKIAJEJTE3D2LHWDSHPQ",
     "AWS_SECRETACCESSKEY": "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",
@@ -23,7 +23,7 @@
         "GOOGLE_CLIENT_SECRET": "OIz_6r8joEUlhcrcuzWrTftl",
         "GOOGLE_REDIRECT_URI": "http://dev.ilimi.in:3000/user/google/login/response",
         "HOSTED_DOMAIN": "ilimi.in",
-        "GOOGLE_AUTH_SCOPES": ["https://www.googleapis.com/auth/gmail.modify", "https://www.googleapis.com/auth/userinfo.email"],
+        "GOOGLE_AUTH_SCOPES": ["https://www.googleapis.com/auth/userinfo.email"],
         "FACEBOOK_APP_ID": "844215588980073",
         "FACEBOOK_APP_SECRET": "b129dfc70b3f62b182ca580795d7b2c8",
         "FACEBOOK_REDIRECT_URI": "http://dev.ilimi.in:3000/user/facebook/login/response",
