--- a/platform-ui/conf/appConfig_demo.json
+++ b/platform-ui/conf/appConfig_demo.json
@@ -23,7 +23,7 @@
         "GOOGLE_CLIENT_SECRET": "OIz_6r8joEUlhcrcuzWrTftl",
         "GOOGLE_REDIRECT_URI": "http://dev.ilimi.in:3000/user/google/login/response",
         "HOSTED_DOMAIN": "ilimi.in",
-        "GOOGLE_AUTH_SCOPES": ["https://www.googleapis.com/auth/userinfo.email"],
+        "GOOGLE_AUTH_SCOPES": ["https://www.googleapis.com/auth/userinfo.email", "https://www.googleapis.com/auth/userinfo.profile"],
         "FACEBOOK_APP_ID": "844215588980073",
         "FACEBOOK_APP_SECRET": "b129dfc70b3f62b182ca580795d7b2c8",
         "FACEBOOK_REDIRECT_URI": "http://dev.ilimi.in:3000/user/facebook/login/response",
