--- a/platform-modules/taxonomy/module/taxonomy-service/pom.xml
+++ b/platform-modules/taxonomy/module/taxonomy-service/pom.xml
@@ -46,6 +46,11 @@
 		<pluginManagement>
 			<plugins>
 				<plugin>
+					<groupId>org.apache.tomcat.maven</groupId>
+					<artifactId>tomcat7-maven-plugin</artifactId>
+					<version>2.2</version>
+				</plugin>
+				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
 					<configuration>
