--- a/platform-ui/conf/appConfig.json
+++ b/platform-ui/conf/appConfig.json
@@ -17,12 +17,12 @@
     "AWS_SECRETACCESSKEY": "92YKBRKeFNEXiNu4Q5fR9ZxDmXR/sX6mAvZsy8/F",
     "USE_TEST_MAIL": false,
     "ORCHESTRATOR_URL": "http://localhost:9090",
-    "APP_STATUS": "DEMO",
+    "APP_STATUS": "LIVE",
     "USER_LOGIN": {
         "GOOGLE_CLIENT_ID": "562974388006-1agi51jjnlvskvoiaig2ko8ghghrrvbq.apps.googleusercontent.com",
         "GOOGLE_CLIENT_SECRET": "OIz_6r8joEUlhcrcuzWrTftl",
         "GOOGLE_REDIRECT_URI": "http://dev.ilimi.in:3000/user/google/login/response",
-        "HOSTED_DOMAIN": "ilimi.in",
+        "ACCEPTED_DOMAINS": ["ilimi.in","ekstep.org","sahajsoft.com"],
         "GOOGLE_AUTH_SCOPES": ["https://www.googleapis.com/auth/userinfo.email", "https://www.googleapis.com/auth/userinfo.profile"],
         "FACEBOOK_APP_ID": "844215588980073",
         "FACEBOOK_APP_SECRET": "b129dfc70b3f62b182ca580795d7b2c8",
