--- a/platform-devops/docker/platform-ui/pom.xml
+++ b/platform-devops/docker/platform-ui/pom.xml
@@ -25,7 +25,7 @@
 			  <artifactId>docker-maven-plugin</artifactId>
 			  <version>0.1.1</version>
 			  <configuration>
-				<imageName>ekstep/lpf-ui:${imgVersion}</imageName>
+				<imageName>ekstep/lp-web-service:${imgVersion}</imageName>
 				<dockerDirectory>src/docker</dockerDirectory>
 				<resources>
 				   <resource>
