--- a/platform-core/platform-dac/pom.xml
+++ b/platform-core/platform-dac/pom.xml
@@ -11,7 +11,7 @@
 	<artifactId>platform-dac</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
-	<name>commons DAC</name>
+	<name>Platform DAC</name>
 
 	<profiles>
 		<profile>
