--- a/platform-core/platform-dac/pom.xml
+++ b/platform-core/platform-dac/pom.xml
@@ -6,7 +6,7 @@
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>Platform DAC</name>
-
+	
 	<profiles>
 		<profile>
 			<id>development</id>
@@ -49,6 +49,8 @@
 	<properties>
 		<spring.version>4.0.2.RELEASE</spring.version>
 		<hibernate.version>4.1.4.Final</hibernate.version>
+		<maven.compiler.target>1.7</maven.compiler.target>
+		<maven.compiler.source>1.7</maven.compiler.source>
 	</properties>
 
 	<dependencies>
@@ -179,5 +181,21 @@
 			<version>5.1.10</version>
 		</dependency>
 	</dependencies>
+	
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>2.3.2</version>
+					<configuration>
+						<source>1.7</source>
+						<target>1.7</target>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 
 </project>
