--- a/platform-modules/taxonomy/module/taxonomy-service/src/main/resources/database.properties
+++ b/platform-modules/taxonomy/module/taxonomy-service/src/main/resources/database.properties
@@ -1,7 +1,7 @@
 db.driverClassName=com.mysql.jdbc.Driver
 db.url=jdbc:mysql://localhost:3306/ekstep
 db.username=root
-db.password=c4n0pu5
+db.password=password
 db.initialSize=2
 db.maxActive=10
 db.validationQuery=select 1
