--- a/platform-modules/taxonomy/module/taxonomy-service/src/main/resources/database.properties
+++ b/platform-modules/taxonomy/module/taxonomy-service/src/main/resources/database.properties
@@ -8,7 +8,7 @@ db.validationQuery=select 1
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.show_sql=true
 hibernate.query.substitutions=true 1, false 0
-hibernate.hbm2ddl.auto=none
+hibernate.hbm2ddl.auto=create
 hibernate.default_schema=ekstep
 hibernate.packagesToScan=com.ilimi
 hibernate.jdbc.batch_size=3
