--- a/platform-modules/analytics/module/analytics-service/src/main/webapp/WEB-INF/web.xml
+++ b/platform-modules/analytics/module/analytics-service/src/main/webapp/WEB-INF/web.xml
@@ -29,7 +29,7 @@
     </listener>
 
 	<servlet>
-		<servlet-name>taxonomy-service</servlet-name>
+		<servlet-name>analytics-service</servlet-name>
 		<servlet-class>
 			org.springframework.web.servlet.DispatcherServlet
 		</servlet-class>
@@ -39,17 +39,9 @@
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
-	
-	<servlet>
-		<servlet-name>init-servlet</servlet-name>
-		<servlet-class>
-			com.ilimi.taxonomy.servlet.InitServlet
-		</servlet-class>
-		<load-on-startup>2</load-on-startup>
-	</servlet>
 
 	<servlet-mapping>
-		<servlet-name>taxonomy-service</servlet-name>
+		<servlet-name>analytics-service</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 	
