--- a/platform-modules/analytics/module/analytics-service/src/main/resources/database.properties
+++ b/platform-modules/analytics/module/analytics-service/src/main/resources/database.properties
@@ -1,7 +1,4 @@
 db.driverClassName=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://lp-sandbox-db.cm8jepwsnit8.ap-southeast-1.rds.amazonaws.com:3306/lpsandboxdb
-db.username=lpsandboxdb
-db.password=lp5andb0x
 db.initialSize=2
 db.maxActive=10
 db.validationQuery=select 1
@@ -9,6 +6,17 @@ hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.show_sql=true
 hibernate.query.substitutions=true 1, false 0
 hibernate.hbm2ddl.auto=none
-hibernate.default_schema=lpsandboxdb
 hibernate.packagesToScan=com.ilimi
 hibernate.jdbc.batch_size=3
+
+## Sandbox
+db.url=jdbc:mysql://lp-sandbox-db.cm8jepwsnit8.ap-southeast-1.rds.amazonaws.com:3306/lpsandboxdb
+db.username=lpsandboxdb
+db.password=lp5andb0x
+hibernate.default_schema=lpsandboxdb
+
+## Development
+#db.url=jdbc:mysql://localhost:3306/ekstep
+#db.username=root
+#db.password=
+#hibernate.default_schema=ekstep
