Updated models to use textFile API of SparkContext

--- a/platform-analytics/src/main/resources/config.properties
+++ b/platform-analytics/src/main/resources/config.properties
@@ -2,6 +2,7 @@ s3_bucket=s3n://lpdev-ekstep
 s3_aws_key=AKIAJSHAOKZ7KUZN6DEQ
 s3_aws_secret=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
 db.driverClassName=com.mysql.jdbc.Driver
+default.parallelization=10
 
 # Dev
 db.url=jdbc:mysql://localhost:3306/ekstep
