--- a/platform-modules/analytics/module/analytics-service/src/main/resources/database.properties
+++ b/platform-modules/analytics/module/analytics-service/src/main/resources/database.properties
@@ -10,13 +10,13 @@ hibernate.packagesToScan=com.ilimi
 hibernate.jdbc.batch_size=3
 
 ## Sandbox
-db.url=jdbc:mysql://lp-sandbox-db.cm8jepwsnit8.ap-southeast-1.rds.amazonaws.com:3306/lpsandboxdb
-db.username=lpsandboxdb
-db.password=lp5andb0x
-hibernate.default_schema=lpsandboxdb
+#db.url=jdbc:mysql://lp-sandbox-db.cm8jepwsnit8.ap-southeast-1.rds.amazonaws.com:3306/lpsandboxdb
+#db.username=lpsandboxdb
+#db.password=lp5andb0x
+#hibernate.default_schema=lpsandboxdb
 
 ## Development
-#db.url=jdbc:mysql://localhost:3306/ekstep
-#db.username=root
-#db.password=
-#hibernate.default_schema=ekstep
+db.url=jdbc:mysql://localhost:3306/ekstep
+db.username=root
+db.password=
+hibernate.default_schema=ekstep
