--- a/platform-analytics/src/main/resources/config.properties
+++ b/platform-analytics/src/main/resources/config.properties
@@ -1,4 +1,5 @@
-s3_bucket=s3n://lpdev-ekstep
+s3_input_bucket=lpdev-ekstep
+s3_output_bucket=lpdev-ekstep
 s3_aws_key=AKIAJSHAOKZ7KUZN6DEQ
 s3_aws_secret=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
 db.driverClassName=com.mysql.jdbc.Driver
@@ -8,8 +9,10 @@ default.parallelization=10
 db.url=jdbc:mysql://localhost:3306/ekstep
 db.username=root
 db.password=
+spark_output_temp_dir=/Users/santhosh/ekStep/spark_data_files/tmp/
 
 # Sandbox configuration
 #db.url=jdbc:mysql://lp-sandbox-db.cm8jepwsnit8.ap-southeast-1.rds.amazonaws.com:3306/lp_analytics
 #db.username=lpsandboxdb
 #db.password=lp5andb0x
+#spark_output_temp_dir=/mnt/analytics/tmp/
