--- a/platform-analytics/pom.xml
+++ b/platform-analytics/pom.xml
@@ -11,6 +11,7 @@
 		<maven.compiler.target>1.7</maven.compiler.target>
 		<encoding>UTF-8</encoding>
 		<scala.version>2.10.5</scala.version>
+		<spark.version>1.4.0</spark.version>
 	</properties>
 
 	<dependencies>
@@ -23,7 +24,7 @@
 		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-core_2.10</artifactId>
-			<version>1.3.1</version>
+			<version>${spark.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
