--- a/platform-modules/assessment/module/assessment-mgr-api/pom.xml
+++ b/platform-modules/assessment/module/assessment-mgr-api/pom.xml
@@ -3,11 +3,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.ilimi</groupId>
-		<artifactId>ilimi-taxonomy</artifactId>
+		<artifactId>ilimi-assessment</artifactId>
 		<version>1.0-SNAPSHOT</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
-	<artifactId>taxonomy-mgr-api</artifactId>
+	<artifactId>assessment-mgr-api</artifactId>
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -23,12 +23,6 @@
 		<dependency>
 			<groupId>com.ilimi</groupId>
 			<artifactId>platform-dac</artifactId>
-			<version>1.0-SNAPSHOT</version>
-			<type>jar</type>
-		</dependency>
-		<dependency>
-			<groupId>com.ilimi</groupId>
-			<artifactId>common-mgr</artifactId>
 			<version>1.0-SNAPSHOT</version>
 			<type>jar</type>
 		</dependency>
