--- a/platform-modules/common/module/common-service/pom.xml
+++ b/platform-modules/common/module/common-service/pom.xml
@@ -3,26 +3,35 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.ilimi</groupId>
-		<artifactId>ilimi-taxonomy</artifactId>
+		<artifactId>ilimi-commons</artifactId>
 		<version>1.0-SNAPSHOT</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
-	<artifactId>taxonomy-mgr-api</artifactId>
+	<artifactId>common-service</artifactId>
+	<properties>
+		<maven.compiler.source>1.7</maven.compiler.source>
+		<maven.compiler.target>1.7</maven.compiler.target>
+	</properties>
 	<dependencies>
 		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-			<version>3.3.2</version>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
 		</dependency>
 		<dependency>
 			<groupId>com.ilimi</groupId>
 			<artifactId>graph-engine</artifactId>
-			<version>1.0-SNAPSHOT</version>
-			<type>jar</type>
-		</dependency>
-		<dependency>
-			<groupId>com.ilimi</groupId>
-			<artifactId>platform-dac</artifactId>
 			<version>1.0-SNAPSHOT</version>
 			<type>jar</type>
 		</dependency>
@@ -38,5 +47,6 @@
 			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
+		
 	</dependencies>
 </project>
