--- a/platform-modules/common/module/common-service/pom.xml
+++ b/platform-modules/common/module/common-service/pom.xml
@@ -8,6 +8,7 @@
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 	<artifactId>common-service</artifactId>
+	<packaging>jar</packaging>
 	<properties>
 		<maven.compiler.source>1.7</maven.compiler.source>
 		<maven.compiler.target>1.7</maven.compiler.target>
@@ -22,7 +23,6 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.1.0</version>
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
