--- a/platform-modules/taxonomy/module/taxonomy-service/pom.xml
+++ b/platform-modules/taxonomy/module/taxonomy-service/pom.xml
@@ -8,23 +8,7 @@
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 	<artifactId>taxonomy-service</artifactId>
-	<properties>
-		<maven.compiler.source>1.7</maven.compiler.source>
-		<maven.compiler.target>1.7</maven.compiler.target>
-	</properties>
 	<dependencies>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-webmvc</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>javax.servlet-api</artifactId>
-			<version>3.1.0</version>
-			<scope>provided</scope>
-		</dependency>
-		
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
@@ -33,6 +17,12 @@
 		<dependency>
 			<groupId>com.ilimi</groupId>
 			<artifactId>taxonomy-mgr</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>jar</type>
+		</dependency>
+		<dependency>
+			<groupId>com.ilimi</groupId>
+			<artifactId>common-service</artifactId>
 			<version>1.0-SNAPSHOT</version>
 			<type>jar</type>
 		</dependency>
