add joda time dependency

--- a/platform-modules/analytics/batch-models/telemetry-data-transformer/pom.xml
+++ b/platform-modules/analytics/batch-models/telemetry-data-transformer/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>telemetry-data-transformer</artifactId>
 	<version>1.0</version>
 	<name>telemetry-data-transformer</name>
-	
+
 	<properties>
 		<scala.version>2.10.5</scala.version>
 		<spark.version>1.4.0</spark.version>
@@ -40,6 +40,11 @@
 			<artifactId>spark-streaming-kafka_2.10</artifactId>
 			<version>${spark.version}</version>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.8.1</version>
 		</dependency>
 	</dependencies>
 
