--- a/platform-modules/assessment/module/assessment-service/pom.xml
+++ b/platform-modules/assessment/module/assessment-service/pom.xml
@@ -36,7 +36,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.ilimi</groupId>
-			<artifactId>assessment-mgr-api</artifactId>
+			<artifactId>assessment-mgr</artifactId>
 			<version>1.0-SNAPSHOT</version>
 			<type>jar</type>
 		</dependency>
