--- a/platform-modules/service/module/ekstep-service/pom.xml
+++ b/platform-modules/service/module/ekstep-service/pom.xml
@@ -40,6 +40,12 @@
 			<type>jar</type>
 		</dependency>
 		<dependency>
+			<groupId>com.ilimi</groupId>
+			<artifactId>assessment-service</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>jar</type>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.11</version>
