--- a/platform-modules/taxonomy/module/taxonomy-service/src/main/resources/graph.properties
+++ b/platform-modules/taxonomy/module/taxonomy-service/src/main/resources/graph.properties
@@ -1,5 +1,5 @@
 graph.dir=/data/graphDB
-redis.host=localhost
+redis.host=52.74.51.23
 redis.port=6379
 redis.maxConnections=128
 akka.request_timeout=30
