--- a/platform-modules/analytics/batch-models/concept-proficiency/pom.xml
+++ b/platform-modules/analytics/batch-models/concept-proficiency/pom.xml
@@ -35,6 +35,11 @@
 			<version>${spark.version}</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.8.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
