--- a/platform-core/graph-engine/module/cache-manager/src/main/resources/graph.properties
+++ b/platform-core/graph-engine/module/cache-manager/src/main/resources/graph.properties
@@ -1,5 +1,5 @@
-graph.dir=/var/jenkins_home/graphDB
-redis.host=52.74.51.23
+graph.dir=/data/graphDB
+redis.host=localhost
 redis.port=6379
 redis.maxConnections=128
 akka.request_timeout=30
