--- a/platform-modules/service/module/ekstep-service/pom.xml
+++ b/platform-modules/service/module/ekstep-service/pom.xml
@@ -63,11 +63,16 @@
 			<version>1.1.6</version>
 			<scope>test</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>info.cukes</groupId>
 			<artifactId>cucumber-junit</artifactId>
 			<version>1.1.6</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>6.8.8</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
