--- a/platform-modules/service/module/ekstep-service/pom.xml
+++ b/platform-modules/service/module/ekstep-service/pom.xml
@@ -69,12 +69,12 @@
 			<version>1.1.6</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
 			<version>6.8.8</version>
 			<scope>test</scope>
-		</dependency>
+		</dependency> -->
 	</dependencies>
 	
 	<build>
