--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ derby.log
 platform-analytics/metastore_db
 dependency-reduced-pom.xml
 platform-analytics/checkpoint
+platform-modules/analytics/streaming-models/literacy-level-computation/checkpoint
