--- a/platform-modules/analytics/streaming-models/literacy-level-computation/src/main/resources/config.properties
+++ b/platform-modules/analytics/streaming-models/literacy-level-computation/src/main/resources/config.properties
@@ -10,9 +10,11 @@ default.parallelization=10
 #db.username=root
 #db.password=
 #spark_output_temp_dir=/Users/santhosh/ekStep/spark_data_files/tmp/
+#mapping_file_location=src/main/resources
 
 # Sandbox configuration
 db.url=jdbc:mysql://lp-sandbox-db.cm8jepwsnit8.ap-southeast-1.rds.amazonaws.com:3306/epproddb
 db.username=lpsandboxdb
 db.password=lp5andb0x
 spark_output_temp_dir=/mnt/analytics/tmp/
+mapping_file_location=models
