--- a/platform-modules/taxonomy/module/taxonomy-mgr/pom.xml
+++ b/platform-modules/taxonomy/module/taxonomy-mgr/pom.xml
@@ -15,5 +15,15 @@
 			<version>1.0-SNAPSHOT</version>
 			<type>jar</type>
 		</dependency>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-s3</artifactId>
+			<version>1.9.20.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-cloudfront</artifactId>
+			<version>1.9.20.1</version>
+		</dependency>
 	</dependencies>
 </project>
