Changes: 1. Using jodatime for event date format 2. Getting the literacy game ids from configuration

--- a/platform-modules/analytics/streaming-models/literacy-level-computation/src/main/resources/config.properties
+++ b/platform-modules/analytics/streaming-models/literacy-level-computation/src/main/resources/config.properties
@@ -4,6 +4,7 @@ s3_aws_key=AKIAJSHAOKZ7KUZN6DEQ
 s3_aws_secret=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
 db.driverClassName=com.mysql.jdbc.Driver
 default.parallelization=10
+literacy_screener_games=org.ekstep.lit.scrnr.kan.basic,org.ekstep.lit.scrnr.kan.lite_static
 
 # Dev
 #db.url=jdbc:mysql://localhost:3306/ekstep
