--- a/platform-modules/analytics/streaming-models/literacy-level-computation/pom.xml
+++ b/platform-modules/analytics/streaming-models/literacy-level-computation/pom.xml
@@ -40,6 +40,11 @@
 			<artifactId>spark-streaming-kafka_2.10</artifactId>
 			<version>${spark.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.8.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
