--- a/quiz-app/package.json
+++ b/quiz-app/package.json
@@ -1,20 +1,37 @@
 {
-    "name": "platform-ui",
-    "version": "0.0.1",
-    "private": true,
-    "scripts": {
-        "start": "node app.js"
-    },
-    "dependencies": {
-        "async": "*",
-        "ejs": "*",
-        "express": "3.2.6",
-        "xml2json": "*"
-    },
-    "devDependencies": {
-        "grunt": "^0.4.4",
-        "grunt-cli": "*",
-        "grunt-contrib-copy": "*",
-        "grunt-string-replace": "*"
-    }
+  "name": "quizapp",
+  "version": "1.0.0",
+  "description": "quizApp: An Ionic project",
+  "dependencies": {
+    "async": "*",
+    "ejs": "*",
+    "express": "3.2.6",
+    "xml2json": "*",
+
+    "gulp": "^3.5.6",
+    "gulp-sass": "^1.3.3",
+    "gulp-concat": "^2.2.0",
+    "gulp-minify-css": "^0.3.0",
+    "gulp-rename": "^1.2.0"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.4",
+    "grunt-cli": "*",
+    "grunt-contrib-copy": "*",
+    "grunt-string-replace": "*",
+
+    "bower": "^1.3.3",
+    "gulp-util": "^2.2.14",
+    "shelljs": "^0.3.0"
+  },
+  "cordovaPlugins": [
+    "cordova-plugin-device",
+    "cordova-plugin-console",
+    "cordova-plugin-whitelist",
+    "cordova-plugin-splashscreen",
+    "com.ionic.keyboard"
+  ],
+  "cordovaPlatforms": [
+    "android"
+  ]
 }
