1. Refactor renderer for relative paths 2. Update story and worksheets to work with relative paths 3. Move assets and update markup.xml appropriately 4. Refactor story and worksheet to be self sufficient. 4. Grunt tasks to compress story/worsheet and upload js and samples to S3

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ platform-analytics/metastore_db
 dependency-reduced-pom.xml
 platform-analytics/checkpoint
 platform-modules/analytics/streaming-models/literacy-level-computation/checkpoint
+aws-keys.json
