--- a/quiz-app/package.json
+++ b/quiz-app/package.json
@@ -17,15 +17,18 @@
     },
     "devDependencies": {
         "bower": "^1.3.3",
+        "cca": "^0.7.4",
+        "cordova": "^5.2.0",
         "grunt": "^0.4.4",
+        "grunt-aws-s3": "*",
         "grunt-cli": "*",
-        "grunt-contrib-copy": "*",
         "grunt-contrib-compress": "*",
+        "grunt-contrib-copy": "*",
         "grunt-contrib-uglify": "^0.9.1",
+        "grunt-cordovacli": "*",
         "grunt-string-replace": "*",
         "gulp-util": "^2.2.14",
-        "shelljs": "^0.3.0",
-        "grunt-aws-s3": "*"
+        "shelljs": "^0.3.0"
     },
     "cordovaPlugins": [
         "cordova-plugin-device",
