--- a/quiz-app/package.json
+++ b/quiz-app/package.json
@@ -24,6 +24,8 @@
         "grunt-cli": "*",
         "grunt-contrib-compress": "*",
         "grunt-contrib-copy": "*",
+        "grunt-remove": "*",
+        "grunt-rename": "*",
         "grunt-contrib-uglify": "^0.9.1",
         "grunt-cordovacli": "*",
         "grunt-string-replace": "*",
