--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ dependency-reduced-pom.xml
 platform-analytics/checkpoint
 platform-modules/analytics/streaming-models/literacy-level-computation/checkpoint
 quiz-app/resources
+.classpath
