--- a/platform-modules/service/module/ekstep-service/pom.xml
+++ b/platform-modules/service/module/ekstep-service/pom.xml
@@ -95,6 +95,6 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
-		<finalName>ekstep-service</finalName>
+		<finalName>taxonomy-service</finalName>
 	</build>
 </project>
