updated aws details

--- a/platform-ui/conf/appConfig.json
+++ b/platform-ui/conf/appConfig.json
@@ -13,8 +13,8 @@
     "DEFAULT_LOGGER": "log4js",
     "LOG_LEVEL": "DEBUG",
     "DEFAULT_RESULT_SIZE": 20,
-    "AWS_ACCESSKEYID": "AKIAJSHAOKZ7KUZN6DEQ",
-    "AWS_SECRETACCESSKEY": "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",
+    "AWS_ACCESSKEYID": "AKIAIUGCZGHRNX2ZO3CQ",
+    "AWS_SECRETACCESSKEY": "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",
     "AWS_REGION": "ap-southeast-1",
     "AWS_PUBLIC_BUCKET_NAME": "ekstep-public",
     "USE_TEST_MAIL": false,
