Interrupt telemetry event

--- a/quiz-app/public/json/telemetryConfig.json
+++ b/quiz-app/public/json/telemetryConfig.json
@@ -108,7 +108,23 @@
             "ext": {}
         },
         "OE_INTERRUPT": {
-            "eks": {},
+            "eks": {
+                "type": {
+                    "required": true,
+                    "values": [
+                        "BACKGROUND",
+                        "IDLE",
+                        "SLEEP",
+                        "CALL",
+                        "SWITCH",
+                        "LOCK",
+                        "OTHER"
+                    ]
+                },
+                "id": {
+                    "required": false
+                }
+            },
             "ext": {}
         },
         "OE_LEARN": {
