move custom plugins to inside quiz-app folder

--- a/quiz-app/custom-plugins/DownloaderService/plugin.xml
+++ b/quiz-app/custom-plugins/DownloaderService/plugin.xml
@@ -16,11 +16,11 @@
     <platform name="android">
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="DownloaderService" >
-                <param name="android-package" value="org.apache.cordova.DownloaderService"/>
+                <param name="android-package" value="DownloaderService"/>
             </feature>
         </config-file>
-        <source-file src="src/android/DownloaderService.java" target-dir="src/org/apache/cordova" />
-        <source-file src="src/android/TarUtils.java" target-dir="src/org/apache/cordova" />
+        <source-file src="src/android/DownloaderService.java" target-dir="src/" />
+        <source-file src="src/android/TarUtils.java" target-dir="src/" />
         <source-file src="src/android/libs/commons-compress-1.10.jar" target-dir="libs" />
         <source-file src="src/android/libs/commons-io-2.4.jar" target-dir="libs" />
     </platform>
