Language-Platform Importer Word Redundancy handled By Mohammad Azharuddin :: 08-Dec-2016 -:- 17:08

--- a/language-platform/module/dictionary/pom.xml
+++ b/language-platform/module/dictionary/pom.xml
@@ -15,5 +15,10 @@
 			<version>1.0-SNAPSHOT</version>
 			<type>jar</type>
 		</dependency>
+		<dependency>
+			<groupId>commons-collections</groupId>
+			<artifactId>commons-collections</artifactId>
+			<version>3.2.1</version>
+		</dependency>
 	</dependencies>
 </project>
