tools controller implementation

--- a/language-platform/module/services/pom.xml
+++ b/language-platform/module/services/pom.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-    <groupId>org.ekstep</groupId>
-    <artifactId>language-platform</artifactId>
-    <version>1.0-SNAPSHOT</version>
+	<parent>
+		<groupId>org.ekstep</groupId>
+		<artifactId>language-platform</artifactId>
+		<version>1.0-SNAPSHOT</version>
+		<relativePath>../../pom.xml</relativePath>
+	</parent>
+    <artifactId>language-platform-service</artifactId>
     <packaging>pom</packaging>
-    <name>EkStep Language Platform</name>
-
+    <name>EkStep Language Platform Services</name>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<spring.version>4.0.2.RELEASE</spring.version>
@@ -16,9 +19,7 @@
 	</properties>
 
 	<modules>
-		<module>module/dictionary</module>
-		<module>module/tools</module>
-		<module>module/services</module>
+		<module>language-service</module>
 	</modules>
 
 	<dependencies>
