refactor language platform

--- a/language-platform/pom.xml
+++ b/language-platform/pom.xml
@@ -19,6 +19,7 @@
 		<module>module/dictionary</module>
 		<module>module/tools</module>
 		<module>module/services</module>
+		<module>module/common</module>
 	</modules>
 
 	<dependencies>
