--- a/language-platform/module/services/language-service/pom.xml
+++ b/language-platform/module/services/language-service/pom.xml
@@ -17,14 +17,8 @@
 			<version>2.4</version>
 		</dependency>
 		<dependency>
-			<groupId>com.ilimi</groupId>
-			<artifactId>taxonomy-mgr</artifactId>
-			<version>1.0-SNAPSHOT</version>
-			<type>jar</type>
-		</dependency>
-		<dependency>
-			<groupId>com.ilimi</groupId>
-			<artifactId>common-service</artifactId>
+			<groupId>org.ekstep</groupId>
+			<artifactId>language-common</artifactId>
 			<version>1.0-SNAPSHOT</version>
 			<type>jar</type>
 		</dependency>
