--- a/language-platform/module/tools/pom.xml
+++ b/language-platform/module/tools/pom.xml
@@ -27,6 +27,12 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.ekstep</groupId>
+			<artifactId>language-common</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>jar</type>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.11</version>
