--- a/language-platform/module/language-service/pom.xml
+++ b/language-platform/module/language-service/pom.xml
@@ -3,9 +3,9 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.ekstep</groupId>
-		<artifactId>language-platform-service</artifactId>
+		<artifactId>language-platform</artifactId>
 		<version>1.0-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath>
+		<relativePath>../../pom.xml</relativePath>
 	</parent>
 	<artifactId>language-service</artifactId>
 	<packaging>war</packaging>
@@ -24,7 +24,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.ekstep</groupId>
-			<artifactId>tools-service</artifactId>
+			<artifactId>language-rest-service</artifactId>
 			<version>1.0-SNAPSHOT</version>
 			<type>jar</type>
 		</dependency>
