--- a/language-platform/module/dictionary/pom.xml
+++ b/language-platform/module/dictionary/pom.xml
@@ -7,7 +7,7 @@
 		<version>1.0-SNAPSHOT</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
-	<artifactId>language-platform-dictionary</artifactId>
+	<artifactId>language-dictionary</artifactId>
 	<dependencies>
 		<dependency>
 			<groupId>com.ilimi</groupId>
