--- a/language-platform/module/tools/lexile-algorithms/pom.xml
+++ b/language-platform/module/tools/lexile-algorithms/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.ekstep</groupId>
-		<artifactId>language-platform-tools</artifactId>
+		<artifactId>language-tools</artifactId>
 		<version>1.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
