--- a/language-platform/module/tools/pom.xml
+++ b/language-platform/module/tools/pom.xml
@@ -8,7 +8,7 @@
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
     <groupId>org.ekstep</groupId>
-    <artifactId>language-platform-tools</artifactId>
+    <artifactId>language-tools</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>EkStep Language Platform Tools</name>
