Add initialisation servlet to Language Service

--- a/language-platform/module/services/src/main/webapp/WEB-INF/web.xml
+++ b/language-platform/module/services/src/main/webapp/WEB-INF/web.xml
@@ -37,11 +37,11 @@
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 
-	<!-- <servlet>
+	<servlet>
 		<servlet-name>init-servlet</servlet-name>
 		<servlet-class>org.ekstep.servlet.InitServlet</servlet-class>
 		<load-on-startup>2</load-on-startup>
-	</servlet> -->
+	</servlet>
 
 	<servlet-mapping>
 		<servlet-name>language-service</servlet-name>
